force-app/main/default/objects/Test_Results__c/Test_Results__c.object-meta.xml
<CustomObject>
    <label>Test Result</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Test Results ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>