force-app/main/default/objects/Test_Results__c/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Sign</label>
    <referenceTo>pubacc_hd__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>