force-app/main/default/objects/Test_Results__c/fields/Corrected_In_ULS__c.field-meta.xml
<CustomField>
    <fullName>Corrected_In_ULS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrected In ULS</label>
    <type>Checkbox</type>
</CustomField>