force-app/main/default/objects/Test_Results__c/fields/Correction_Date__c.field-meta.xml
<CustomField>
    <fullName>Correction_Date__c</fullName>
    <label>Correction Date</label>
    <type>Date</type>
</CustomField>