force-app/main/default/objects/Test_Results__c/fields/External_Unique_Identifier1__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Identifier1__c</fullName>
    <externalId>true</externalId>
    <label>External Unique Identifier1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>