force-app/main/default/objects/Test_Results__c/fields/External_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Identifier__c</fullName>
    <label>External Unique Identifier</label>
    <type>TextArea</type>
</CustomField>