force-app/main/default/objects/Test_Results__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>