force-app/main/default/objects/Test_Results__c/fields/Last_Failed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Failed_Date__c</fullName>
    <label>Last Failed Date</label>
    <type>Date</type>
</CustomField>