force-app/main/default/objects/Test_Results__c/fields/Last_Failed_Intake__c.field-meta.xml
<CustomField>
    <fullName>Last_Failed_Intake__c</fullName>
    <label>Last Failed Intake</label>
    <type>Date</type>
</CustomField>