force-app/main/default/objects/Test_Results__c/fields/Last_Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Date__c</fullName>
    <label>Last Tested Date</label>
    <type>Date</type>
</CustomField>