force-app/main/default/objects/Test_Results__c/fields/Last_Tested_Intake__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Intake__c</fullName>
    <label>Last Tested Intake</label>
    <type>Date</type>
</CustomField>