force-app/main/default/objects/Test_Results__c/fields/Ref_Integrity_Test__c.field-meta.xml
<CustomField>
    <fullName>Ref_Integrity_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref Integrity Test</label>
    <referenceTo>Ref_Integrity_Test__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>