force-app/main/default/objects/Test_Results__c/fields/Stage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Stage_Investigation__c</fullName>
    <formula>TEXT( Investigation__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage - Investigation</label>
    <type>Text</type>
</CustomField>