force-app/main/default/objects/Test_Results__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <formula>RIGHT(External_Unique_Identifier1__c , 9)</formula>
    <label>Table Name</label>
    <type>Text</type>
</CustomField>