force-app/main/default/objects/Test_Results__c/fields/Test_Exclusion_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Test_Exclusion_Indicator__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Test Exclusion Indicator</label>
    <type>Checkbox</type>
</CustomField>