force-app/main/default/objects/Test_Results__c/fields/Test_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Id__c</fullName>
    <label>Test Id</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>