force-app/main/default/objects/Test_Results__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Test Results</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>