force-app/main/default/objects/Test_Results__c/fields/Validate_Date__c.field-meta.xml
<CustomField>
    <fullName>Validate_Date__c</fullName>
    <label>Validate Date</label>
    <type>Date</type>
</CustomField>