force-app/main/default/objects/Test_Results__c/fields/Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Validated_By__c</fullName>
    <label>Validated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>